# data-utils

./: .gitignore  LICENSE  README.MD  commands.sh  comment_pr.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  test.yml
main/rawdata/: __init__.py  classfromjson.py  flattenjson.py  israwstructures.py  namingconversion.py
tests/rawdata/: test_classfromjson.py  test_flattenjson.py  test_israwstructures.py  test_namingconversion.py
