[tool.poetry]
name = "data-utils"
version = "0.1.0"
description = "Help you with common processing of data"
authors = ["TangJo <tanguy.jooris@hotmail.com>"]
license = "MIT"
readme = "README.MD"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
packages = [
    {include = "rawdata", from = "main"}
]

[tool.poetry.scripts]
classfromjson = "rawdata.classfromjson:classfromjson"


[tool.poetry.dependencies]
python = "^3.9,^3.10"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pycln = "^1.3.3"
coverage = {extras = ["toml"], version = "^6.4.1"}

[tool.black]
include = "((main|tests)/.*)|noxfile.py"

[tool.pycln]
extend-exclude = [".*/__init__.py"]

[tool.isort]
profile = "black"
skip_gitignore = "true"
src_paths = ["main", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
