[metadata]
name = data-utils
version = 0.0.1
author = Tanguy Jooris
author_email = tanguy.jooris@hotmail.com
project_urls = 
    Github = https://github.com/TangJo97/data-utils
description = Help you with common processing of data
long_description = file: README.MD
license = MIT
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = main
packages = find:
python_requires = >=3.9
install_requires=
    pydantic

[options.entry_points]
console_scripts =
    classfromjson = rawdata.classfromjson:classfromjson

[options.packages.find]
where = main


[flake8]
max-line-length = 88
extend-ignore = E203
filename = 
    *.py
extend-exclude =
    */__pycache__/
    env/
    .vscode/
    build/
    .nox/
per-file-ignores =
    main/*/__init__.py:F401
    setup.py:E121